Refactor from roomName to roomId
